--- a/circle.yml
+++ b/circle.yml
@@ -26,7 +26,7 @@ dependencies:
       export PATH="$HOME/miniconda/bin:$PATH" &&
       source activate test &&
       conda install -q ciocheck -c spyder-ide --no-update-deps &&
-      if [ "$CIRCLE_NODE_INDEX" = "2" ]; then pip install -q spyder pyqt5==5.8.0; else conda install -q -y spyder; fi &&
+      if [ "$CIRCLE_NODE_INDEX" = "2" ]; then pip install -q spyder pyqt5; else conda install -q -y spyder; fi &&
       if [ "$CIRCLE_NODE_INDEX" = "2" ]; then pip uninstall -q -y spyder; else conda remove -q -y spyder; fi &&
       mkdir spyder-source && cd spyder-source &&
       wget -q https://github.com/spyder-ide/spyder/archive/3.x.zip && unzip -q 3.x.zip &&
