--- a/.github/workflows/linux-tests.yml
+++ b/.github/workflows/linux-tests.yml
@@ -19,14 +19,14 @@ jobs:
     strategy:
       fail-fast: false 
       matrix:
-        PYTHON_VERSION: ['3.7', '3.8', '3.9']
+        PYTHON_VERSION: ['3.9', '3.10', '3.11']
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
       - name: Install System Packages
         run: | 
           sudo apt-get update
-          sudo apt-get install libegl1-mesa
+          sudo apt-get install -y libegl-mesa0
       - name: Install Conda
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -36,8 +36,9 @@ jobs:
            python-version: ${{ matrix.PYTHON_VERSION }} 
            use-only-tar-bz2: true
            channels: conda-forge,defaults
-           channel-priority: strict
-           miniforge-variant: Mambaforge
+      - name: Upgrade pip, setuptools, wheel (via conda)
+        shell: bash -l {0}
+        run: conda install pip setuptools wheel -y -q -c conda-forge
       - name: Install package dependencies
         shell: bash -l {0}
         run: conda install --file requirements/conda.txt -y -q -c conda-forge
