--- a/.github/workflows/windows-tests.yml
+++ b/.github/workflows/windows-tests.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false 
       matrix:
-        PYTHON_VERSION: ['3.7', '3.8', '3.9']
+        PYTHON_VERSION: ['3.9', '3.10', '3.11']
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
@@ -27,13 +27,11 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
            activate-environment: test
-           auto-update-conda: true
+           auto-update-conda: false
            auto-activate-base: false
-           python-version: ${{ matrix.PYTHON_VERSION }}
+           python-version: ${{ matrix.PYTHON_VERSION }} 
            use-only-tar-bz2: true
            channels: conda-forge,defaults
-           channel-priority: strict
-           miniforge-variant: Mambaforge
       - name: Install package dependencies
         shell: bash -l {0}
         run: conda install --file requirements/conda.txt -y -q -c conda-forge
